--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -153,6 +153,8 @@ services:
       - DB_HOST=postgres        # 关键修复：使用服务名称
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0  # 使用 Redis 服务名称
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
     volumes:
       - /var/www/agent/static:/app/staticfiles
       - /var/www/agent/static:/app/media
@@ -176,6 +178,8 @@ services:
       - DB_HOST=postgres        # 关键修复：使用服务名称
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0  # 使用 Redis 服务名称
+      - CELERY_BROKER_URL=redis://redis:6379/1
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
     volumes:
       - /var/www/agent/static:/app/staticfiles
       - /var/www/agent/static:/app/media
