--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,8 +74,8 @@ services:
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0  # 使用 Redis 服务名称
     volumes:
-      - /var/www/agent/static:/app/staticfiles
-      - /var/www/agent/static:/app/media
+      - /var/www/static:/app/staticfiles
+      - /var/www/static:/app/media
       - ./templates:/app/templates
     command: >
       sh -c "python manage.py migrate &&
@@ -101,8 +101,9 @@ services:
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0  # 使用 Redis 服务名称
     volumes:
-      - /var/www/agent/static:/app/staticfiles
-      - /var/www/agent/static:/app/media
+      - ./:/app
+      - /var/www/static:/app/staticfiles
+      - /var/www/static:/app/media
       - ./templates:/app/templates
     command: >
       sh -c "python manage.py migrate &&
@@ -128,8 +129,9 @@ services:
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0  # 使用 Redis 服务名称
     volumes:
-      - /var/www/agent/static:/app/staticfiles
-      - /var/www/agent/static:/app/media
+      - ./:/app
+      - /var/www/static:/app/staticfiles
+      - /var/www/static:/app/media
       - ./templates:/app/templates
     command: >
       sh -c "python manage.py migrate &&
@@ -156,8 +158,9 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/1
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
     volumes:
-      - /var/www/agent/static:/app/staticfiles
-      - /var/www/agent/static:/app/media
+      - ./:/app
+      - /var/www/static:/app/staticfiles
+      - /var/www/static:/app/media
       - ./templates:/app/templates
     command: ["celery", "-A", "apns", "worker", "--loglevel=info"]
     networks:
@@ -181,8 +184,9 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/1
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
     volumes:
-      - /var/www/agent/static:/app/staticfiles
-      - /var/www/agent/static:/app/media
+      - ./:/app
+      - /var/www/static:/app/staticfiles
+      - /var/www/static:/app/media
       - ./templates:/app/templates
     command: ["celery", "-A", "apns", "beat", "--loglevel=info"]
     networks:
