--- a/nginx.conf
+++ b/nginx.conf
@@ -45,22 +45,22 @@ server {
     }
 
     # 精细化路由配置
-    location /api/users/ {
+    location /users/ {
         proxy_pass http://127.0.0.1:8001;
         include proxy_params;
     }
 
-    location /api/pocket/ {
+    location /pocket/ {
         proxy_pass http://127.0.0.1:8002;
         include proxy_params;
     }
 
-    location /api/apns/ {
+    location /apns/ {
         proxy_pass http://127.0.0.1:8003;
         include proxy_params;
     }
 
-    location /api/agent/ {
+    location /agent/ {
         proxy_pass http://127.0.0.1:8004;
         include proxy_params;
     }
