--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ server {
 
     # 静态文件配置（需与Django的STATIC_ROOT设置一致）
     location /static/ {
-        alias /var/www/;
+        alias /var/www/static/;
         autoindex off;
         expires 365d;
         access_log off;
