--- a/nginx.conf
+++ b/nginx.conf
@@ -28,17 +28,66 @@ server {
     ssl_prefer_server_ciphers off;
 
     # 静态文件配置（需与Django的STATIC_ROOT设置一致）
-    location /static/ {
-        alias /var/www/static/;
+    location /static/users-service/ {
+        alias /var/www/static/users-service/;
         autoindex off;
         expires 365d;
         access_log off;
         add_header Cache-Control "public";
     }
 
-    # 媒体文件配置（需与Django的MEDIA_ROOT设置一致）
-    location /media/ {
-        alias /var/www/;
+    location /static/pocket-service/ {
+        alias /var/www/static/pocket-service/;
+        autoindex off;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    location /static/apns-service/ {
+        alias /var/www/static/apns-service/;
+        autoindex off;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    location /static/agent-service/ {
+        alias /var/www/static/agent-service/;
+        autoindex off;
+        expires 365d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+
+    location /media/users-service/ {
+        alias /var/www/media/users-service/;
+        autoindex off;
+        expires 7d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    location /media/pocket-service/ {
+        alias /var/www/media/pocket-service/;
+        autoindex off;
+        expires 7d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    location /media/apns-service/ {
+        alias /var/www/media/apns-service/;
+        autoindex off;
+        expires 7d;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    location /media/agent-service/ {
+        alias /var/www/media/agent-service/;
+        autoindex off;
         expires 7d;
         access_log off;
         add_header Cache-Control "public";
