--- a/nginx.conf
+++ b/nginx.conf
@@ -95,22 +95,22 @@ server {
 
     # 精细化路由配置
     location /users/ {
-        proxy_pass http://127.0.0.1:8001;
+        proxy_pass http://127.0.0.1:8001/;
         include proxy_params;
     }
 
     location /pocket/ {
-        proxy_pass http://127.0.0.1:8002;
+        proxy_pass http://127.0.0.1:8002/;
         include proxy_params;
     }
 
     location /apns/ {
-        proxy_pass http://127.0.0.1:8003;
+        proxy_pass http://127.0.0.1:8003/;
         include proxy_params;
     }
 
     location /agent/ {
-        proxy_pass http://127.0.0.1:8004;
+        proxy_pass http://127.0.0.1:8004/;
         include proxy_params;
     }
 
