--- a/nginx.conf
+++ b/nginx.conf
@@ -127,18 +127,15 @@ server {
     }
 }
 
-# 建议将以下内容保存为 /etc/nginx/proxy_params
-proxy_set_header Host $http_host;
+# 公共代理参数文件 (proxy_params)
+proxy_set_header Host $host;
 proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 proxy_set_header X-Forwarded-Proto $scheme;
-proxy_set_header Upgrade $http_upgrade;
-proxy_set_header Connection "upgrade";
-proxy_http_version 1.1;
-
+proxy_set_header X-Forwarded-Host $host;
+proxy_set_header X-Forwarded-Port $server_port;
 proxy_redirect off;
-proxy_buffering off;
-proxy_read_timeout 300s;
-proxy_connect_timeout 75s;
-proxy_send_timeout 300s;
-client_max_body_size 100m;
+proxy_buffering on;
+proxy_buffer_size 4k;
+proxy_buffers 8 16k;
+proxy_busy_buffers_size 32k;
